--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build && next export && firebase deploy",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "firebase": "^10.13.2",
-    "next": "14.2.11",
+    "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "yetou": "file:"
